# end_point/swagger.yml
@@ -120,5 +120,27 @@ paths:
              properties:
                angle:
                  type: integer
+ /src/driver/ScientificCalc/ScientificCalc/tan_fun{tan_angle}:
+   post:
+     operationId: src.driver.scientific_calc.ScientificCalc.tan_fun
+     tags:
+       - tangent
+     summary: Read a number to find tanh calculation
+     description: Read a number
+     parameters:
+       - name: tan_angle
+         in: path
+         type: string
+         description: Number of people to get from people
+         required: true
+     responses:
+       200:
+         description: Successfully read people list operation
+         schema:
+           type: number
+           items:
+             properties:
+               angle:
+                 type: integer
 
 
